<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            style="@style/MainStyle"
            android:text="@string/julia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            style="@style/GreyStyle"
            android:text="@string/photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
    />

    <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:src="@drawable/Coin"
            app:civ_border_width="3dp"
            app:civ_border_color="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:id="@+id/circleImageView"
            app:layout_constraintEnd_toEndOf="@+id/textView2" app:layout_constraintStart_toStartOf="@+id/textView2"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/divider"
    />

    <ImageButton
            style="@style/ButtonStyle"
            android:layout_width="76dp"
            android:layout_height="76dp"
            app:srcCompat="@drawable/baseline_chat_24"
            android:id="@+id/imageButton3"
            app:layout_constraintEnd_toStartOf="@+id/circleImageView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.92"
            app:layout_constraintTop_toTopOf="@+id/circleImageView"
            app:layout_constraintBottom_toBottomOf="@+id/circleImageView"/>

    <ImageButton
            style="@style/ButtonStyle"
            android:layout_width="76dp"
            android:layout_height="76dp"
            app:srcCompat="@drawable/baseline_phone_24"
            android:id="@+id/imageButton4"
            app:layout_constraintStart_toEndOf="@+id/circleImageView"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
            app:layout_constraintTop_toTopOf="@+id/circleImageView"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_height="59dp"
            android:layout_width="58dp"
            app:backgroundTint="@color/buttonColor"
            app:fabSize="normal"
            android:src="@drawable/person"
            app:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/floatingActionButton"/>
    <TextView
            style="@style/PurpleStyle"
            android:text="@string/pos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4" app:layout_constraintTop_toTopOf="@+id/textView4"/>
    <TextView
            style="@style/PurpleStyle"
            android:text="@string/foll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/divider" android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintVertical_chainStyle="packed"/>
    <TextView
            style="@style/PurpleStyle"
            android:text="@string/folli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4"/>
    <TextView
            style="@style/GreyStyle"
            android:text="@string/posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3" app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"/>

    <TextView
            style="@style/GreyStyle"
            android:text="@string/follow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintEnd_toEndOf="@+id/textView4"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/divider2"/>

    <TextView
            style="@style/GreyStyle"
            android:text="@string/followin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"/>
    <TextView
            style="@style/BasicStyle"
            android:text="@string/strange_txt"
            android:gravity="center"
            android:layout_width="338dp"
            android:layout_height="88dp"
            android:id="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            app:layout_constraintBottom_toTopOf="@+id/divider3"/>
    <TextView
            style="@style/NewPurple"
            android:text="@string/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10" app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/textView11" android:layout_marginStart="8dp"/>

    <TextView
            style="@style/NewPurple"
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.43"
            app:layout_constraintTop_toBottomOf="@+id/divider3" android:layout_marginTop="16dp"/>
    <TextView
            style="@style/NewPurple"
            android:text="@string/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12" app:layout_constraintStart_toStartOf="@+id/textView10"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView15"/>
    <TextView
            style="@style/NewPurple"
            android:text="@string/locat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            app:layout_constraintStart_toStartOf="@+id/textView11" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/floatingActionButton" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            style="@style/GreyStyle"
            android:text="@string/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView14" app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
    />
    <TextView
            style="@style/GreyStyle"
            android:text="@string/web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView15" app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10"/>
    <TextView
            style="@style/GreyStyle"
            android:text="@string/pho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView16" app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12"/>
    <TextView
            style="@style/GreyStyle"
            android:text="@string/lo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView17" app:layout_constraintStart_toStartOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textView13"/>
    <View
            style="@style/dividerStyle"
            android:layout_height="1dp"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="1dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="1dp"
            android:id="@+id/divider"
            android:visibility="visible" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"/>

    <View
            style="@style/dividerStyle"
            android:layout_height="1dp"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/divider2" android:layout_marginStart="1dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="1dp"
            android:visibility="visible" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/textView9"/>

    <View
            style="@style/dividerStyle"
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:id="@+id/divider3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="1dp"
            android:visibility="visible"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/textView11"/>

</android.support.constraint.ConstraintLayout>
